[workspace]

members = [
    "contracts/hyp-erc20",

    "tests/hyperlane-connection-client-test",
    "tests/hyperlane-gas-router-test",
    "tests/hyperlane-router-test",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/hyperlane-xyz/hyperlane-token-sway"
authors = ["Abacus Works"]

[workspace.dependencies]
fuels = { git = "https://github.com/FuelLabs/fuels-rs", tag = "v0.41.0" }
hyperlane-core = { git = "https://github.com/hyperlane-xyz/hyperlane-monorepo", rev = "930cded" }
# test-utils = { git = "https://github.com/hyperlane-xyz/fuel-contracts", rev = "71e6d37" }
test-utils = { path = "/Users/trevor/fuel-contracts/test-utils" }
tokio = { version = "1.12" }
